--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "react-router-dom": "^7.5.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "react-router-dom": "^7.5.0"
+    "vite": "^6.2.0"
   }
 }
