--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -22,12 +22,8 @@ jobs:
     - name: Compile build
       run: npm run build
 
+    - name: clear folder
+      run: ssh ${{ secrets.SSH_USERNAME }} -i ${{ secrets.SSH_KEY }} 'rm -rf ${{ secrets.DESTINATION_HOST }}/*'    
+
     - name: Upload via scp with private key
-      uses: pierrickdelrieu/scp-action@v0.1.0
-      with:
-        host: ${{ secrets.DESTINATION_HOST }}
-        ssh_username: ${{ secrets.SSH_USERNAME }}
-        ssh_key: ${{ secrets.SSH_KEY }}
-        source_dir: ${{ secrets.SOURCE_FOLDER }}
-        destination_dir: ${{ secrets.DESTINATION_FOLDER }}
-        rm: true
+      run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -i ${{ secrets.SSH_KEY }}
