--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -24,8 +24,11 @@ jobs:
     - name: Compile build
       run: npm run build
 
+    - name: create key file
+      run: echo ${{ secrets.SSH_KEY }} > key.priv
+
     - name: clear folder
-      run: ssh ${{ secrets.SSH_USERNAME }} -i ${{ secrets.SSH_KEY }} 'rm -rf ${{ secrets.DESTINATION_FOLDER }}/*'    
+      run: ssh ${{ secrets.SSH_USERNAME }} -i key.priv 'rm -rf ${{ secrets.DESTINATION_FOLDER }}/*'    
 
     - name: Upload via scp with private key
       run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -i ${{ secrets.SSH_KEY }}
