--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -33,12 +33,12 @@ jobs:
     #- name: Upload via scp with private key
     #  run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -i ${{ secrets.SSH_KEY }}
 
-    - name: Upload via scp with private key
-      uses: pierrickdelrieu/scp-action@v0.1.2
+    - name: SCP files via ssh key
+      uses: appleboy/scp-action@master
+      env:
+        USERNAME: ${{ secrets.USERNAME }}
+        HOST: ${{ secrets.DESTINATION_HOST }}
+        KEY: ${{ secrets.SSH_KEY }}
       with:
-        host: ${{ secrets.DESTINATION_HOST }}
-        ssh_username: ${{ secrets.SSH_USERNAME }}
-        ssh_key: ${{ secrets.SSH_KEY }}
-        source_dir: ${{ secrets.SOURCE_FOLDER }}
-        destination_dir: ${{ secrets.DESTINATION_FOLDER }}
-        rm: true
+        source: './dist/'
+        target: '~/htdocs/dev.gaminglounge.me/'
