--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -33,12 +33,12 @@ jobs:
     #- name: Upload via scp with private key
     #  run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -i ${{ secrets.SSH_KEY }}
 
-    - name: SCP files via ssh key
-      uses: appleboy/scp-action@master
-      env:
-        USERNAME: ${{ secrets.USERNAME }}
-        HOST: ${{ secrets.DESTINATION_HOST }}
-        KEY: ${{ secrets.SSH_KEY }}
+    - name: Publish
+      uses: nogsantos/scp-deploy@master
       with:
-        source: './dist/'
-        target: '~/htdocs/dev.gaminglounge.me/'
+        src: ./dist/*
+        host: ${{ secrets.DESTINATION_HOST }}
+        remote: ${{ secrets.DESTINATION_FOLDER }}
+        port: 22
+        user: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
