--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -28,8 +28,7 @@ jobs:
       run: echo "${{ secrets.SSH_KEY }}" > key.priv
 
     - name: clear folder
-      run: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv "rm -rf ${{ secrets.DESTINATION_FOLDER }}*"
-      run: chmod 600 key.priv 
+      run: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv "rm -rf ${{ secrets.DESTINATION_FOLDER }}* && chmod 600 key.priv "
 
     - name: Upload via scp with private key
       run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i ${{ secrets.SSH_KEY }}
