windoof linux support

--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -27,11 +27,18 @@ jobs:
     - name: create key file
       run: echo "${{ secrets.SSH_KEY }}" > key.priv
 
-    - name: update key file permissons
+    - name: update linux key file permissons
+      if: runner.os == 'Linux'
       run: chmod 600 key.priv
 
+    - name: update windows key file permissons
+      if: runner.os == 'Windows'
+      run: |
+        icacls key.priv /inheritance:r
+        icacls key.priv /grant:r "${{ secrets.SSH_USERNAME }}":(R)
+
     - name: clear folder
-      run: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv "rm -rf ${{ secrets.DESTINATION_FOLDER }}*"
+      run: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv "find ${{ secrets.DESTINATION_FOLDER }} -type f ! -name '.htaccess' -exec rm {} \;"
 
     - name: Upload via scp with private key
-      run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i ${{ secrets.SSH_KEY }}
+      run: scp ${{ secrets.SOURCE_FOLDER }} ${{ secrets.SSH_USERNAME }}:${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv
