--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -35,7 +35,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         icacls key.priv /inheritance:r
-        icacls key.priv /grant:r "${{ secrets.SSH_USERNAME }}":(R)
+        icacls key.priv /grant:r "%username%":(R)
 
     - name: clear folder
       run: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.DESTINATION_HOST }} -o "StrictHostKeyChecking no" -i key.priv "find ${{ secrets.DESTINATION_FOLDER }} -type f ! -name '.htaccess' -exec rm {} \;"
