--- a/.github/workflows/npm-build-publish.yml
+++ b/.github/workflows/npm-build-publish.yml
@@ -35,7 +35,7 @@ jobs:
       if: runner.os == 'Windows'
       run: |
         icacls key.priv /inheritance:r
-        icacls key.priv /grant:r "%username%":(R)
+        icacls key.priv /grant:r "%USERDOMAIN%\%username%":(R)
       shell: cmd
 
     - name: clear folder
